update git with k8s

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Azure DevOps Documentation
-description: Documentation for Azure DevOps features and configurations.
+title: Techno Tree Documentation
+description: Documentation of various technologies and their configurations.
 theme: jekyll-theme-cayman
 markdown: kramdown
 plugins:
